--- a/frontend/src/styles/SuspectCard.css
+++ b/frontend/src/styles/SuspectCard.css
@@ -6,7 +6,7 @@
         display: flex;
         align-items: center;
         background: white;
-        
+        padding: 10px;
         animation: slidein 5s
 }
 
