--- a/frontend/src/styles/SuspectCard.css
+++ b/frontend/src/styles/SuspectCard.css
@@ -20,11 +20,11 @@
 @keyframes raise {
         from {
                 transform: translate(0px,0px);
-                box-shadow: 0px 0px;
+                box-shadow: 0px 0px rgb(103, 65, 26);
         }
 
         to {
                 transform: translate(-10px,-10px);
-                box-shadow: 10px 10px;
+                box-shadow: 10px 10px rgb(103, 65, 26);
         }
 }
