--- a/frontend/src/styles/Button.css
+++ b/frontend/src/styles/Button.css
@@ -15,12 +15,12 @@
     transition: background-size .4s, background-position 0s .4s;
 }
 
-button:hover {
+.button:hover {
     --_p: 100%;
     transition: background-position .4s, background-size 0s;
 }
 
-button:active {
+.button:active {
     box-shadow: 0 0 9e9q inset #0009;
     background-color: var(--c);
     color: #fff;
@@ -36,5 +36,48 @@ button:active {
     font-weight: bold;
     border: none;
     position:absolute;
+}
+
+/* this is the CSS to make the butt*/
+#submit {
+    --c: rgb(120, 120, 120);
+    /* the color*/
+
+    box-shadow: 0 0 0 .1em inset var(--c);
+    --_g: linear-gradient(var(--c) 0 0) no-repeat;
+    background:
+        var(--_g) calc(var(--_p, 0%) - 100%) 0%,
+        var(--_g) calc(200% - var(--_p, 0%)) 0%,
+        var(--_g) calc(var(--_p, 0%) - 100%) 100%,
+        var(--_g) calc(200% - var(--_p, 0%)) 100%;
+    background-size: 50.5% calc(var(--_p, 0%)/2 + .5%);
+    outline-offset: .1em;
+    transition: background-size .4s, background-position 0s .4s;
+}
+
+#submit:hover {
+    --_p: 100%;
+    transition: background-position .4s, background-size 0s;
+}
+
+#submit:active {
+    box-shadow: 0 0 9e9q inset #0009;
+    background-color: var(--c);
+    color: #fff;
+}
+
+
+
+#submit {
+    font-family: system-ui, sans-serif;
+    font-size: 3.5rem;
+    cursor: pointer;
+    padding: .1em .6em;
+    font-weight: bold;
+    border: none;
+    position: absolute;
+    width: 90px;
+    height: 30px;
+    font-size: 16px;
 }
 
